# trigger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_vs2019.bat  imgui.ini  main.cpp
Assets/Scene/: test.toml  test.txt  test2.map
Assets/Shaders/: color.hlsl
build64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  trigger.sln  trigger.vcxproj  trigger.vcxproj.filters
build64/trigger.dir/Release/trigger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog
build64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
core/components/: collider.h
core/editor/: impl_editor.h  main_editor.cpp  main_editor.h
core/game/: actor.h  class_manager.h  component.h  component_world.h  engine.cpp  engine.h  file.h  fsm.h  mini_core.h  object_renderer.h  property.h  transform.cpp  transform.h  trigger_tools.h  vec.cpp  vec.h  world.h
core/imgui/: imgui_impl_dx12.cpp  imgui_impl_vulkan.cpp  imgui_impl_win32.cpp
core/impl/: impl_singleton.h
lib/dx11/: D3DX11Effect.h
lib/vk/: libglfw.3.3.dylib
lib/vk/glfw-3.2.1.WIN64/include/GLFW/: glfw3.h
renderer/: dx11.cpp  dx11.h  dx12.cpp  dx12.h  material.h  renderer.h  vk.cpp  vk.h
test/: test
tools/: macros.h  zinny
trigger-component/: CMakeLists.txt  components.cpp  components.h
trigger-component/src/Shader/: Shader.cpp  Shader.h
trigger-component/src/camera/: camera.cpp  camera.h
trigger-component/src/gizmo/: gizmo.cpp  gizmo.h
trigger-component/src/material/: material.cpp  material.h
trigger-component/src/renderer/: renderer.cpp  renderer.h
trigger-engine/: CMakeLists.txt  LICENSE  gen_vs2017.bat  main.cpp
trigger-engine/Assets/Scene/: test2.map
trigger-engine/Assets/Shaders/: Default.hlsl
trigger-engine/Debug/: trigger-engine.lib
trigger-engine/ImGuiColorTextEdit/: TextEditor.cpp
trigger-engine/core/editor/: console.h  impl_editor.h  main_editor.cpp  main_editor.h
trigger-engine/core/game/: class_manager.h  component.h  engine.cpp  engine.h  file.h  fsm.h  object_renderer.h  pool.h  property.h  transform.cpp  transform.h  trigger_tools.h  world.h
trigger-engine/core/imgui/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
trigger-engine/core/impl/: impl_singleton.h
trigger-engine/imgui/: imgui_demo.cpp
trigger-engine/imgui/examples/: imgui_impl_dx11.cpp
trigger-engine/imgui/examples/example_glfw_vulkan/: main.cpp
trigger-engine/lib/vk/glfw-3.2.1.WIN64/include/GLFW/: glfw3.h
trigger-engine/renderer/: dx11.cpp  dx11.h  dx12.h  material.h  renderer.h  vk.cpp  vk.h
trigger-engine/tools/: macros.h
trigger-engine/zinny/: .gitignore  CMakeLists.txt  README.md  main.cpp
trigger-engine/zinny/src/: zinny-tool.h  zinny.h
